--- a/part1/index.html
+++ b/part1/index.html
@@ -27,6 +27,7 @@
         // 3. children   // what we have to put inside the tag name
 
         // const news = React.createElement("h1", {}, "hello duniya")
+        // {} this empty object gives attribute to your tag like id or classes {id:"heading"}
         // as we have crated this heading now we have to put th heading nside the rood div
         // to  do this react need to have a root where it can do the DOM stuff
         // the core part of thi react is to create ekement tht is from the first link then we have to build a root that will be from the ReactDom
